2006-12-19 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b29

 * Fix: Removed duplicate require in:
	- setup/defaults.inc
	- setup/constants.inc

 * Change: Added gallerySanityCheck() into setup/index.php

2006-12-19 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b28

 * Removed: Param $userlanguage from initLanguage()

 * Change: Adjust call of initLanguage in init.php
	   When a user logs in, the language in the session var is updated.
	   This this param is not need and also just one call is needed.

 * Change: Moved position of set_time_limit in init.php,
	   as the check for existing config.php is now in gallerySanityCheck()

 * CHANGE: Load session code before language init.

2006-12-18 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b27

 * Change: Use of enableCaptcha() in:
	- lib/content.php
	- popups/add_comment.php
   
  Load captcha classes also only if captcha is enabled.

 * Change: Added check for captcha tempfolder.

 * REMOVED: gallery_validation_link(), album_validation_link()
 
2006-12-18 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b26

 * Change: Check for existing album dir in gallerySanityCheck()

 * New: function gdAvailable()

 * New: function enableCaptcha()

 * New: Additional Option in setup : enableCaptcha (for comments)
	- no : No captcha at all
	- yes: Captcha for everybody
	- anonymous: Captcha only for not logged in users.

   Config Version bump -> 100 !

2006-12-18 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b25

 * Fix: Typo in lib/Form.php

 * New: Function printInfoBox()

2006-12-05 Chris Kelly <ckdake@ckdake.com> 1.6-alpha3-svn-b24

 * Fix: proper svn keywords in files, this will make the up to date
	check in setup not complain when it looks in the manifest file

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b23

 * NEW: !!! CAPTCHA SUPPORT !!!

 Added exprimental captcha support.

 Used hn_captcha classes from Horst Nogajski, horst AT nogajski DOT de

 * New files:
	- includes/captcha/COM430.TTF
	- includes/captcha/captcha_init.php