@@ -1,3 +1,12 @@
+2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b30
+
+ * Change: If target is absolute, dont make it "more" absolute.
+
+ * Change: Add message in configwizard when PHP does not support GD
+		   and thus no captcha is available. 
+
+ * Fix: Disable captcha if no config info is available.
+
 2006-12-19 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b29
 
  * Fix: Removed duplicate require in:
